@@ -1,18 +1,15 @@
 package io.openaev.utils;
 
-import static io.openaev.utils.constants.StixConstants.STIX_NAME;
-import static io.openaev.utils.constants.StixConstants.STIX_TYPE;
-import static io.openaev.utils.constants.StixConstants.STIX_X_MITRE_ID;
-import static io.openaev.utils.constants.StixConstants.STIX_X_SECURITY_COVERAGE;
+import static io.openaev.utils.constants.StixConstants.*;
 
 import io.openaev.database.model.StixRefToExternalRef;
 import io.openaev.stix.objects.Bundle;
 import io.openaev.stix.objects.ObjectBase;
 import io.openaev.stix.objects.constants.CommonProperties;
+import io.openaev.stix.objects.constants.ExtendedProperties;
 import io.openaev.stix.objects.constants.ObjectTypes;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import io.openaev.stix.types.Dictionary;
+import java.util.*;
 import java.util.stream.Collectors;
 import org.apache.coyote.BadRequestException;
 
@@ -29,11 +26,11 @@ public class SecurityCoverageUtils {
    * @throws BadRequestException if the bundle does not contain exactly one such object
    */
   public static ObjectBase extractAndValidateCoverage(Bundle bundle) throws BadRequestException {
-    List<ObjectBase> coverages = bundle.findByType(STIX_X_SECURITY_COVERAGE);
+    List<ObjectBase> coverages = bundle.findByType(ObjectTypes.SECURITY_COVERAGE);
     if (coverages.size() != 1) {
-      throw new BadRequestException("STIX bundle must contain exactly one x-security-coverage");
+      throw new BadRequestException("STIX bundle must contain exactly one security-coverage");
     }
-    return coverages.get(0);
+    return coverages.getFirst();
   }
 
   /**
@@ -43,18 +40,24 @@ public class SecurityCoverageUtils {
    * StixRefToExternalRef} mapping between the object's STIX ID and its MITRE external ID.
    *
    * @param objects the list of STIX objects to scan
-   * @return a list of {@link StixRefToExternalRef} mappings between STIX and MITRE IDs
+   * @return a set of {@link StixRefToExternalRef} mappings between STIX and MITRE IDs
    */
   public static Set<StixRefToExternalRef> extractObjectReferences(List<ObjectBase> objects) {
     Set<StixRefToExternalRef> stixToRef = new HashSet<>();
 
     for (ObjectBase obj : objects) {
       String stixType = (String) obj.getProperty(STIX_TYPE).getValue();
-      String refId;
+      String refId = null;
 
       if (ObjectTypes.ATTACK_PATTERN.toString().equals(stixType)) {
-        refId = (String) obj.getProperty(STIX_X_MITRE_ID).getValue();
-      } else {
+        if (obj.hasExtension(ExtendedProperties.MITRE_EXTENSION_DEFINITION)) {
+          refId =
+              (String)
+                  ((Dictionary) obj.getExtension(ExtendedProperties.MITRE_EXTENSION_DEFINITION))
+                      .get(CommonProperties.ID.toString())
+                      .getValue();
+        }
+      } else if (obj.hasProperty(STIX_NAME)) {
         refId = (String) obj.getProperty(STIX_NAME).getValue();
       }
 
@@ -71,7 +74,7 @@ public class SecurityCoverageUtils {
 
   /**
    * @param objectRefs the list of STIX objects to scan
-   * @return a list of {@link StixRefToExternalRef} mappings between STIX and MITRE IDs
+   * @return a set of {@link StixRefToExternalRef} mappings between STIX and MITRE IDs
    */
   public static Set<String> getExternalIds(Set<StixRefToExternalRef> objectRefs) {
     return objectRefs.stream()
